Added social icons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,10 +15,10 @@
 <header>
     <h1>Jordan Ranson</h1>
     <nav>
-        <div class="social-icon twitter"></div>
-        <div class="social-icon github"></div>
-        <div class="social-icon linkedin"></div>
-        <input type="text" value="search">
+        <div class="social-icon twitter"><a href="https://twitter.com/jordanranson" target="_blank"><img width="32" src="images/twitter.svg"></a></div>
+        <div class="social-icon github"><a href="https://github.com/jordanranson" target="_blank"><img width="32" src="images/github.svg"></a></div>
+        <div class="social-icon linkedin"><a href="http://www.linkedin.com/in/jordanranson" target="_blank"><img width="32" src="images/linkedin.svg"></a></div>
+        <input type="text" placeholder="search">
         <div class="top-btn">
             <em>&times;</em>
             <span> Close</span>
