--- a/less/site.less
+++ b/less/site.less
@@ -295,8 +295,13 @@ header {
             width: 32px;
             margin-right: 10px;
 
-            background: #ccc;
             vertical-align: bottom;
+            opacity: 0.25;
+            transition: opacity @fast @easing;
+
+            &:hover {
+                opacity: 1;
+            }
         }
 	}
 }
@@ -363,7 +368,7 @@ h1 {
     a {
         position: relative;
         display: block;
-        padding: 7px 0;
+        padding: 4px 0;
         height: 34px;
         line-height: 34px;
         font-size: 18pt;
@@ -380,7 +385,7 @@ h1 {
             display: block;
             width: 32px;
             height: 32px;
-            top: 8px;
+            top: 7px;
 
             &::before, &::after {
                 backface-visibility: hidden;
@@ -451,7 +456,7 @@ h1 {
         top: 0; left: 20px;
 
         a {
-            padding-left: 42px;
+            padding-left: 40px;
 
             em {
                 left: 0;
@@ -469,7 +474,7 @@ h1 {
         top: 0; right: 20px;
 
         a {
-            padding-right: 42px;
+            padding-right: 40px;
 
             em {
                 right: 0;
