--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,8 +22,9 @@ created: 2014-01-03T19:05:17.351Z
     <div class="content">
 
         {{#each months}}
+        <h2>{{month}} <span>{{year}}</span></h2>
 
-            <h2>{{month}} <span>{{year}}</span></h2>
+        <div>
 
             {{#each assets}}
 
@@ -103,6 +104,7 @@ created: 2014-01-03T19:05:17.351Z
 
             {{/each}}
 
+        </div>
         {{/each}}
 
         {{! <section class="gallery">
