Fixed date sorting

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -127,9 +127,9 @@ created: 2014-01-03T19:05:17.351Z
 
         <h2>Projects</h2>
 
-        <section class="article">
-            <div class="media left"></div>
-            <article class="right">
+        <section class="article spinner">
+            <div class="media left spinner"></div>
+            <article class="right spinner">
                 <h3>SAM</h3>
                 <p>Phasellus ligula sem, laoreet luctus luctus sed, pharetra in mi. Aenean accumsan gravida convallis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
                 <footer>
