--- a/less/site.less
+++ b/less/site.less
@@ -74,14 +74,28 @@ table {
 
 
 /*  
-   General styles 
+   General styles
+
 */
+
+html {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
 
 body {
 	font: 400 13pt/1.17 'Open Sans', sans-serif;
-	background: @black;
+	background: #141414;
 	color: @lightGray;
-    overflow-x: hidden;
 
 	&.fullscreen {
 		header nav {
