--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,11 +18,11 @@
         <div class="social-icon twitter"><a href="https://twitter.com/jordanranson" target="_blank"><img width="32" src="images/twitter.svg"></a></div>
         <div class="social-icon github"><a href="https://github.com/jordanranson" target="_blank"><img width="32" src="images/github.svg"></a></div>
         <div class="social-icon linkedin"><a href="http://www.linkedin.com/in/jordanranson" target="_blank"><img width="32" src="images/linkedin.svg"></a></div>
-        <input type="text" placeholder="search">
+        <!--<input type="text" placeholder="search">
         <div class="top-btn">
             <em>&times;</em>
             <span> Close</span>
-        </div>
+        </div>-->
     </nav>
 </header>
 
